--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <h1>RJ Ponder</h1>
     
-    <h2>Future Front-end Developer</h2>
+    <h2>Future Software Engineer</h2>
     
     <p>
       <strong>Github Link:</strong>
