--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <h1>RJ Ponder</h1>
+    <h1>Robert J. Ponder</h1>
     
     <h2>Future Software Engineer</h2>
     
