--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="pt-4 clearfix">
-          <h1 class="site-title mb-0">Walter Patterson</h1>
+          <h1 class="site-title mb-0">RJ Ponder</h1>
           <div class="site-nav"> 
             <nav role="navigation">
               <ul class="nav justify-content-center">
@@ -64,7 +64,7 @@
             <div class="header-bio mt-3">
               <div data-aos="zoom-in" data-aos-delay="0">
                 <h2 class="h1">RJ Ponder</h2>
-                <p>Future Software Engineer</p>
+                <p>Studying Software Engineering at Launch School</p>
               </div>
               <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
                 <nav role="navigation">
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m RJ Ponder. I am a Technical Services Scientist II at Fareva Richmond, but am studying at Launch School to become a software engineer. passionate about UI/UX design and Web Design. I am a skilled <strong>front-end developer</strong> and master of graphic design tools such as Photoshop and Sketch. I am a quick learner and a team worker that gets the job done.</p>
+          <p>Hello! I’m RJ Ponder. I am a Technical Services Scientist II at Fareva Richmond, but am studying at Launch School to become a software engineer. I am a quick learner and a team worker that gets the job done.</p>
           <p>I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time schemas.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
