--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
         </div>
       </div>
     </div>
+    <div style="display: flex; justify-content: flex-end">
+      <div><a class="nav-link" href="#top"><i class="fas fa-arrow-circle-up text-muted" style="width:24px;opacity:0.85;"></i>Top</a></div>
+    </div>
   </div>
   <div class="shadow-1-strong bg-white my-5 p-5" id="skills">
     <div class="skills-section">
@@ -163,6 +166,9 @@
             </div>
           </div>
       </div>
+    </div>
+    <div style="display: flex; justify-content: flex-end">
+      <div><a class="nav-link" href="#top"><i class="fas fa-arrow-circle-up text-muted" style="width:24px;opacity:0.85;"></i>Top</a></div>
     </div>
   </div>
   <div class="shadow-1-strong bg-white my-5 p-5" id="education">
@@ -250,6 +256,7 @@
             <h6>Projects</h6>
             <li>Book Reading App</li>
             <li>Todo List App</li>
+          </div>
         </div>
         <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="200">
           <div class="timeline-head px-4 pt-3">
@@ -268,6 +275,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div style="display: flex; justify-content: flex-end">
+      <div><a class="nav-link" href="#top"><i class="fas fa-arrow-circle-up text-muted" style="width:24px;opacity:0.85;"></i>Top</a></div>
     </div>
   </div>
   <div class="shadow-1-strong bg-white my-5 p-5" id="experience">
@@ -293,8 +303,10 @@
         </div>
       </div>
     </div>
+    <div style="display: flex; justify-content: flex-end">
+      <div><a class="nav-link" href="#top"><i class="fas fa-arrow-circle-up text-muted" style="width:24px;opacity:0.85;"></i>Top</a></div>
+    </div>
   </div>
-  
   <div class="shadow-1-strong bg-white my-5 p-5 d-print-none" id="portfolio">
     <div class="portfolio-section">
       <h2 class="h2 fw-light mb-4">Portfolio</h2>
@@ -303,7 +315,7 @@
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
           <div class="m-4 mt-md-2">
             <p class="text-teal text-small">Ruby / HTTP Routing / Sinatra / Heroku</p>
-            <h3>Book Viewer App</h3>
+            <a href="https://rj-ponder-ls-rb175-book-viewer.herokuapp.com/" target="_blank"><h3 class="nav-link-3">Book Viewer App</h3></a>
             <p class="text-muted">Built a book viewer for "The Adventures of Sherlock Holmes". This was a guided project.</p>
           </div>
         </div>
@@ -312,12 +324,15 @@
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
           <div class="m-4 mt-md-2 text-end">
             <p class="text-teal text-small">Ruby / HTTP Routing / Sinatra / Heroku</p>
-            <h3>Todo List App</h3>
+            <a href="https://rj-ponder-ls-rb175-todos.herokuapp.com/lists" target="_blank"><h3 class="nav-link-3">Todo List App</h3></a>
             <p class="text-muted">Build a Todo list app where you can create and delete lists and add, edit, and track todo items. This was a guided project.</p>
           </div>
         </div>
         <div class="col-md-6"><a href="https://rj-ponder-ls-rb175-todos.herokuapp.com/lists" target="_blank"><img class="img-fluid" src="images/project-2.jpg" width="800" height="500"/></a></div>
       </div>
+    </div>
+    <div style="display: flex; justify-content: flex-end">
+      <div><a class="nav-link" href="#top"><i class="fas fa-arrow-circle-up text-muted" style="width:24px;opacity:0.85;"></i>Top</a></div>
     </div>
   </div>
 <!--  <div class="shadow-1-strong bg-white my-5 p-5" id="references">-->
@@ -401,10 +416,14 @@
         </div>
         <div class="text-small">
           <div class="mb-1">&copy; Material Resume. All rights reserved.</div>
+          <div class="mb-1">Images sourced from <a href="https://www.pexels.com/" target="_blank">Pexels</a></div>
           <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
         </div>
       </div>
     </footer>
+    <div style="display: flex; justify-content: flex-end">
+      <div><a class="nav-link" href="#top"><i class="fas fa-arrow-circle-up text-muted" style="width:24px;opacity:0.85;"></i>Top</a></div>
+    </div>
     <script src="scripts/mdb.min.js?ver=1.2.1"></script>
     <script src="scripts/aos.js?ver=1.2.1"></script>
     <script src="scripts/main.js?ver=1.2.1"></script>
