--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <div class="m-4 mt-md-2">
             <p class="text-teal text-small">Ruby / HTTP Routing / Sinatra / Heroku</p>
             <a href="https://rj-ponder-ls-rb175-book-viewer.herokuapp.com/" target="_blank"><h3 class="nav-link-3">Book Viewer App</h3></a>
-            <p class="text-muted">Built a book viewer for "The Adventures of Sherlock Holmes". This was a guided project.</p>
+            <p class="text-muted">Built a book viewer for "The Adventures of Sherlock Holmes".</p>
           </div>
         </div>
       </div>
@@ -325,7 +325,7 @@
           <div class="m-4 mt-md-2 text-end">
             <p class="text-teal text-small">Ruby / HTTP Routing / Sinatra / Heroku</p>
             <a href="https://rj-ponder-ls-rb175-todos.herokuapp.com/lists" target="_blank"><h3 class="nav-link-3">Todo List App</h3></a>
-            <p class="text-muted">Build a Todo list app where you can create and delete lists and add, edit, and track todo items. This was a guided project.</p>
+            <p class="text-muted">Built a Todo list app where you can create and delete lists and add, edit, and track todo items.</p>
           </div>
         </div>
         <div class="col-md-6"><a href="https://rj-ponder-ls-rb175-todos.herokuapp.com/lists" target="_blank"><img class="img-fluid" src="images/project-2.jpg" width="800" height="500"/></a></div>
