--- a/index.html
+++ b/index.html
@@ -291,13 +291,12 @@
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">October 2020 - Present</div>
             <div>
-              <li>Support technology transfer to optimize manufacturing and packaging of customers’ aerosol products (hairspray, dry shampoo, mousse)</li>
-              <li>Interface with customer about product specifications and our capability</li>
-              <li>Write detailed yet easy to use batching and packaging instruction records for Operations to execute</li>
-              <li>Provide technical oversight to manufacturing and packaging teams during qualification and launch of new products</li>
-              <li>Perform data analysis and write technical reports to summarize results</li>
-              <li>Evaluate equipment and process problems to improve efficiency and performance</li>
-              <li>Investigate downtime or quality issues to determine root cause, supporting corrective and preventive actions as necessary</li>
+              <li>Successfully launched 18 new aerosol products by providing technical oversight to production, qualifying capability, and writing the report</li>
+              <li>Wrote 47 batching/packaging instruction records that are detailed and clear to follow</li>
+              <li>Communicated multiple spec changes with clients based on data analysis</li>
+              <li>Trained personnel on and wrote documentation for a new instrument</li>
+              <li>Wrote and executed a protocol to rework and save a 8,200 kg batch of hairspray that was made incorrectly</li>
+              <li>Executed over 30 studies for spec confirmation or product qualification</li>
             </div>
           </div>
         </div>
