removing extensions from links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#portfolio" title="Portfolio"><span class="menu-title">Portfolio</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="/blog/post_1/" title="Blog"><span class="menu-title">Blog</span></a>
+                <li class="nav-item"><a class="nav-link" href="blog" title="Blog"><span class="menu-title">Blog</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="blog/post_1" title="Post"><span class="menu-title">Post</span></a>
                 </li>
                 <!--<li class="nav-item"><a class="nav-link" href="#references" title="References"><span class="menu-title">References</span></a>-->
                 <!--</li>-->
