added syntax highlighting

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="css/aos.css?ver=1.2.1" rel="stylesheet">
     <link href="css/main.css?ver=1.2.1" rel="stylesheet">
     <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/atom-one-dark.min.css">
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/base16/gruvbox-dark-pale.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
     <noscript>
@@ -48,8 +48,7 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="blog" title="Blog"><span class="menu-title">Blog</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="blog/post_1" title="Post"><span class="menu-title">Post</span></a>
-                </li>
+                
                 <!--<li class="nav-item"><a class="nav-link" href="#references" title="References"><span class="menu-title">References</span></a>-->
                 <!--</li>-->
                 <!--<li class="nav-item"><a class="nav-link" href="#contact" title="Contact"><span class="menu-title">Contact</span></a>-->
